# reflex-simpleicons

./: .gitignore  README.md  pyproject.toml
custom_components/reflex_simpleicons/: __init__.py  simpleicons.py
custom_components/reflex_simpleicons/data/: brands_color.py
simpleicons_demo/: .gitignore  requirements.txt  rxconfig.py
simpleicons_demo/simpleicons_demo/: simpleicons_demo.py
